--- a/css/jquery.emojipicker.css
+++ b/css/jquery.emojipicker.css
@@ -44,7 +44,7 @@
 .emojiPicker .shortcode {height:40px; background:#eee; border-top:1px solid #ddd; vertical-align:middle;}
 .emojiPicker .shortcode .info {display:none;}
 .emojiPicker .shortcode .emoji {position:relative; top:4px; left:8px; width:1.9em; height:1.9em; margin-right:20px;}
-.emojiPicker .shortcode em {position:relative; top:1px; color:#444; font-size:12px; font-weight:900; font-style:normal;}
+.emojiPicker .shortcode em {position:relative; top:1px; margin-left:5px; color:#444; font-size:12px; font-weight:900; font-style:normal;}
 .emojiPicker .shortcode em.tabTitle {position:relative; top:10px; left:8px; font-size:14px;}
 .emojiPicker .shortcode em.tabTitle .count {font-size:12px; font-weight:500;}
 .emojiPicker .shortcode .random .tabTitle {color:#7d7d7d; font-size:12px;}
