--- a/css/jquery.emojipicker.css
+++ b/css/jquery.emojipicker.css
@@ -38,6 +38,7 @@
 .emojiPicker section em div:hover {cursor:pointer;}
 
 .emojiPicker section .wrap {width:100%;}
+.emojiPicker section.search {padding-right: 2.5%;}
 .emojiPicker section.search .wrap {padding-top:1%;}
 .emojiPicker section.search input {display:block; width:96%; height:28px; margin:2%; padding:1%; font-size:12px; border:1px solid #ddd; border-radius:4px;}
 
